change some translation strings

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -348,10 +348,10 @@
     "tutorial_optionnalPhase_repeat": "This tile allows you to repeat a sequence of actions and avoids having to copy tasks indefinitely. The tasks to be repeated can either be from the very beginning of the quest or from the beginning of a Step. To add a tile of this type, click on a '+' as if adding a Task.",
     "tutorial_optionnal_step": "Step",
     "tutorial_optionnalPhase_step": "This tile allows you to 'break down' the quest into multiple parts if necessary.",
-    "tutorial_optionnal_supplementaryRole": "Supplementary Role",
-    "tutorial_optionnalPhase_supplementaryRole": "This allows a role to have additional options related to this new function. For example, they can perform tasks specific to this supplementary role. To do this, provide the information for this role, then click on the relevant Task and select this role in the 'Task linked to the supplementary role' tile in the sidebar. If you have defined a specific color for this role, the linked Task will have the same color.",
+    "tutorial_optionnal_supplementaryRole": "Additional Role",
+    "tutorial_optionnalPhase_supplementaryRole": "This allows a role to have additional options related to this new function. For example, they can perform tasks specific to this additional role. To do this, provide the information for this role, then click on the relevant Task and select this role in the 'Task linked to the additional role' tile in the sidebar. If you have defined a specific color for this role, the linked Task will have the same color.",
     "tutorial_optionnal_optionnalTask": "Alternative Task",
-    "tutorial_optionnalPhase_optionnalTask": "This Task is necessary to meet pedagogical objectives, unlike additional Tasks. However, the role will have the choice between 2 alternative Tasks to accomplish what is asked. For example, if they have to create a website, they could either (alternative Task 1) use a platform that allows creating websites without coding or (alternative Task 2) create their site from scratch, with code.",
+    "tutorial_optionnalPhase_optionnalTask": "This Task is necessary to meet pedagogical objectives, unlike side Tasks. However, the role will have the choice between 2 alternative Tasks to accomplish what is asked. For example, if they have to create a website, they could either (alternative Task 1) use a platform that allows creating websites without coding or (alternative Task 2) create their site from scratch, with code.",
     "tutorial_optionnal_characters": "Non Player Characters",
     "tutorial_optionnalPhase_characters": "It is possible to add non player characters to your scenario who can interact with the Roles. To do this, create a character (1st column on the left) and then select the task in which they will intervene and choose this character in the associated tile in the sidebar. An icon in the color of your character will appear on the Task to easily identify this indication.",
     "tutorial_optionnal_resource": "Resources (& skills)",
@@ -392,12 +392,12 @@
     "legals_dysfunction_title": "Dysfunction and viruses.",
     "legals_dysfunction_content": "IMT Nord Europe cannot be held responsible for direct or indirect damages, losses, or expenses resulting from the use of this website, or the inability of a third party to use it, or from a malfunction, interruption, virus, or a problem with the line or system.",
     "legals_credits_title": "Credits",
-    "legals_credits_content1": "The texts on this site are licensed under CC-BY-NC-SA (Creative Commons with permission for use under the conditions of attribution, non-commercial use, and sharing under the same initial terms).\n\nIcons created by max.icons and Freepik, sourced from: www.flaticon.com and are licensed under CC-BY 3.0.\n\nDevelopment: Romain Deleau\n\nWeb design: Gaëlle Guigon\n\nThese works are part of the Nucléofil project, funded by the government as part of the stimulus package.",
+    "legals_credits_content1": "The texts on this site are licensed under CC-BY-NC-SA (Creative Commons with permission for use under the conditions of attribution, non-commercial use, and sharing under the same initial terms).\n\nIcons created by max.icons and Freepik, sourced from: www.flaticon.com and are licensed under CC-BY 3.0.\n\nDevelopment: Romain Deleau\n\nWeb design: Gaëlle Guigon\n\nThis work was funded by the French government as part of the France Relance recovery plan through the Nucléofil project.",
     "legals_credits_content2": "Additionally, they are the subject of a doctoral thesis at Sorbonne Université (at LIP6 in the team MOCAH), in collaboration with IMT Nord Europe.",
     "legals_cookies_title": "Cookies",
     "legals_cookies_content": "We do not record any cookies and do not save any personal data!",
 
-    "rewards_tooltip": "",
+    "rewards_tooltip": "Indicate the result obtained",
     "rewards_title": "Result / Reward",
     "rewards_type_label": "Type",
     "rewards_type_none": "None",
