--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -138,6 +138,7 @@
     "role_reward_type_label": "Type",
     "role_reward_type_newQuest": "Start a new quest",
     "role_reward_type_newQuest_tooltip": "Choose a quest from another mission with the same Role name",
+    "role_reward_quest_placeholder": "Name of the quest",
     "role_reward_type_skill": "Develop a field of expertise",
     "role_reward_type_skill_tooltip": "Choose a skill created below",
     "role_reward_type_character": "Retrieve the contact of an NPC",
@@ -147,6 +148,7 @@
     "role_reward_type_object": "Retrieve an item",
     "role_reward_type_object_placeholder": "Name of the object",
     "role_reward_type_object_delete": "this Object of the Reward",
+    "role_reward_type_object_tooltip": "Choose a created object",
     "role_reward_type_other": "Other",
     "role_reward_delete": "this Reward",
     "role_personnalization_title": "Customization",
@@ -434,7 +436,7 @@
     "discussion_declarativeSentence": "Sentence",
     "discussion_interrogativeSentence": "Question",
     "discussion_response": "Response",
-    "discussion_result_label": "Result",
+    "discussion_result_label": "Results",
     "discussion_result_placeholder": "Select a result",
     "discussion_nextSentence_label": "Next sentence",
     "discussion_nextSentence_placeholder": "Select the next sentence",
@@ -448,6 +450,10 @@
     "discussion_delete": "this Discussion",
     "discussion_declarativeSentence_delete": "this Sentence",
     "discussion_interrogativeSentence_delete": "this Question",
-    "discussion_response_delete": "this Response"
+    "discussion_response_delete": "this Response",
+    "discussion_reward_type_discussion_tooltip": "",
+    "discussion_reward_type_declarativeSentence_tootlip": "",
+    "discussion_reward_type_interrogativeSentence_tooltip": "",
+    "discussion_reward_type_response_tooltip": ""
 
 }
