add discussion reward in role, discussion, sentence, response

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -150,6 +150,9 @@
     "role_reward_type_object_delete": "this Object of the Reward",
     "role_reward_type_object_tooltip": "Choose a created object",
     "role_reward_type_other": "Other",
+    "role_reward_type_discussion_placeholder": "Name of the discussion",
+    "role_reward_type_discussion": "Unlock a discussion",
+    "role_reward_type_discussion_tooltip": "Choose the name of the discussion",
     "role_reward_delete": "this Reward",
     "role_personnalization_title": "Customization",
     "role_personnalization_label": "Appearance, equipment",
