--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -150,6 +150,9 @@
     "role_reward_type_object_tooltip": "Choisir un objet créé",
     "role_reward_type_object_delete": "cet Objet de la Récompense",
     "role_reward_type_other": "Autre",
+    "role_reward_type_discussion_placeholder": "Nom de la discussion",
+    "role_reward_type_discussion": "Débloquer une discussion",
+    "role_reward_type_discussion_tooltip": "Choisir le nom de la discussion",
     "role_reward_delete": "cette Récompense",
     "role_personnalization_title": "Personnalisation",
     "role_personnalization_label": "Apparence, équipement",
