alert when enabling unity mode indicating that the export isn't available

--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -18,6 +18,7 @@
     "enableHelp_tooltip": "Descriptif de chaque élément du RLG Maker.",
     "unity_label": "Intégrer le jeu sous Unity",
     "unity_tooltip": "Utilisation dans un template de jeu précis. Contacter gaelle.guigon@imt-nord-europe.fr pour plus d'informations.",
+    "unity_export_notavailable": "Attention, l'export de fichier pour l'application Unity n'est pas encore disponible dans cette version, seule l'édition du scénario en prévision est possible",
     "download_label": "Télécharger ce scénario",
     "download_tooltip": "Télécharger une sauvegarde du scénario.",
     "upload_label": "Importer un scénario",
