--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -18,6 +18,7 @@
     "enableHelp_tooltip": "Description of each element of the RLG Maker.",
     "unity_label": "Integrate the game into Unity",
     "unity_tooltip": "Usage in a specific game template. Contact gaelle.guigon@imt-nord-europe.fr for more information.",
+    "unity_export_notavailable": "Attention, file export for the Unity application is not yet available in this version, only editing of the scenario in preparation is possible",
     "download_label": "Download this scenario",
     "download_tooltip": "Download a backup of the scenario.",
     "upload_label": "Import a scenario",
