--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -299,8 +299,7 @@
     "repeat_title1": "Répéter",
     "repeat_title2": "fois",
     "repeat_title3": "ou jusqu'à ce que :",
-    "repeat_missionRepeatLimit1": "Ne peut être répétée que",
-    "repeat_missionRepeatLimit2": "fois dans la mission",
+    "repeat_missionRepeatLimit": "Ne jouer qu'un seul tour",
 
     "supplementaryRole_title": "Tâche liée au rôle supplémentaire",
     "supplementaryRole_tooltip": "Sert à associer ou non une tâche à un Rôle supplémentaire.",
