export unity/disable unused task in unity mode

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -17,10 +17,11 @@
     "enableHelp_label": "Enable the tooltips",
     "enableHelp_tooltip": "Description of each element of the RLG Maker.",
     "unity_label": "Integrate the game into Unity",
-    "unity_tooltip": "Usage in a specific game template. Contact gaelle.guigon@imt-nord-europe.fr for more information.",
-    "unity_export_notavailable": "Attention, file export for the Unity application is not yet available in this version, only editing of the scenario in preparation is possible",
+    "unity_tooltip": "Usage in a specific game template. Contact gaelle.guigon@imt-nord-europe.fr for more information. Only normal tasks are active in this mode.",
     "download_label": "Download this scenario",
     "download_tooltip": "Download a backup of the scenario.",
+    "exportUnity_label": "Export Role",
+    "exportUnity_tooltip": "Export the desired role in a format readable by the third-party application. Contact gaelle.guigon@imt-nord-europe.fr for more information. Attention, an exported file cannot be used to reload a saved scenario in RLG Maker.",    
     "upload_label": "Import a scenario",
     "upload_tooltip": "Import a backup of the scenario.",
     "manual_label": "Download the guide",
@@ -40,6 +41,7 @@
     "snackbar_roleName": "Attention, this title is already used in this Mission",
     "snackbar_moveOptionnalTask": "Make sure to keep alternative tasks grouped in the same column",
     "snackbar_deleteOptionnalTask": "Attention, alternative tasks go in pairs at minimum, ensure that the user always has a choice between several of these tasks",
+    "snackbar_unity_exportFailed": "Export failed, please ensure all exported fields are properly filled",
 
     "siderTitle_game": "Game",
     "siderTitle_mission": "Mission",
@@ -231,6 +233,7 @@
     "task_unity_exchangeObjects_receive_label": "To receive:",
     "task_unity_name_label": "Name:",
     "task_unity_desc_label": "Descr:",
+    "task_unity_disabledTask_tooltip": "Task disabled, only normal tasks are enabled in Unity mode",
     "task_copy_snackbar": "Task copied, go to another role to paste it\nSome fields are not copied, make sure to manually verify the information when pasting",
     "normalTask_title": "Task",
     "normalTask_action_placeholder": "Ordering the main HTML tags",
