--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -17,10 +17,11 @@
     "enableHelp_label": "Activer les aides",
     "enableHelp_tooltip": "Descriptif de chaque élément du RLG Maker.",
     "unity_label": "Intégrer le jeu sous Unity",
-    "unity_tooltip": "Utilisation dans un template de jeu précis. Contacter gaelle.guigon@imt-nord-europe.fr pour plus d'informations.",
-    "unity_export_notavailable": "Attention, l'export de fichier pour l'application Unity n'est pas encore disponible dans cette version, seule l'édition du scénario en prévision est possible",
+    "unity_tooltip": "Utilisation dans un template de jeu précis. Contacter gaelle.guigon@imt-nord-europe.fr pour plus d'informations. Seules les tâches normale sont actives dans ce mode.",
     "download_label": "Télécharger ce scénario",
     "download_tooltip": "Télécharger une sauvegarde du scénario.",
+    "exportUnity_label": "Exporter un rôle",
+    "exportUnity_tooltip": "Exporter le rôle voulu au format lisible par l'application tierce. Contacter gaelle.guigon@imt-nord-europe.fr pour plus d'informations. Attention, un fichier exporté ne peut être utilisé pour recharger une sauvegarde du scénario dans RLG Maker.",
     "upload_label": "Importer un scénario",
     "upload_tooltip": "Importer une sauvegarde du scénario.",
     "manual_label": "Télécharger le guide",
@@ -40,6 +41,7 @@
     "snackbar_roleName": "Attention, cet intitulé est déjà utilisé dans cette Mission",
     "snackbar_moveOptionnalTask": "Veillez à garder les tâches alternatives groupées dans la même colonne",
     "snackbar_deleteOptionnalTask": "Attention, les tâches alternatives vont au minimum par deux, veillez à ce que l'utilisateur ait toujours le choix entre plusieurs de ces tâches",
+    "snackbar_unity_exportFailed": "Export échoué, veillez à vérifier que tous les champs exportés soient bien remplis",
 
     "siderTitle_game": "Jeu",
     "siderTitle_mission": "Mission",
@@ -231,6 +233,7 @@
     "task_unity_exchangeObjects_receive_label": "A recevoir :",
     "task_unity_name_label": "Nom :",
     "task_unity_desc_label": "Descr :",
+    "task_unity_disabledTask_tooltip": "Tâche désactivée, seules les tâches normales sont activées en mode Unity",
     "task_copy_snackbar": "Tâche copiée, rendez-vous dans un autre rôle pour le coller\nCertains champs ne sont pas copiés, veillez à vérifier manuellement les informations lors du collage",
     "normalTask_title": "Tâche",
     "normalTask_action_placeholder": "Positionner dans l'ordre les balises HTML principales",
