add reward type 'RandomObjects' on Mission,Role,Task,Discussion,Sentence,Response

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -156,6 +156,7 @@
     "role_reward_type_discussion_placeholder": "Name of the discussion",
     "role_reward_type_discussion": "Unlock a discussion",
     "role_reward_type_discussion_tooltip": "Choose the name of the discussion",
+    "role_reward_type_randomObjects": "Random objects",
     "role_reward_delete": "this Reward",
     "role_personnalization_title": "Customization",
     "role_personnalization_label": "Appearance, equipment",
@@ -417,10 +418,15 @@
     "rewards_type_object": "Object",
     "rewards_type_character": "Character contact",
     "rewards_type_skill": "Skill",
+    "rewards_type_randomObjects": "Random objects",
     "rewards_name_label": "Name",
     "rewards_object_placeholder": "Name of the object",
     "rewards_character_placeholder": "Character",
     "rewards_skill_placeholder": "Skill",
+    "rewards_randomObjects_repeat": "Number of draws ",
+    "rewards_randomObjects_dropBetween_part1": "Retrieve between",
+    "rewards_randomObjects_dropBetween_part2": "and",
+    "rewards_randomObjects_percentages_tooltip": "Percentage chance of retrieving the object per draw. Percentages assigned to an object are considered as the chances of retrieving nothing",
 
     "discussions_title": "Discussions",
     "discussions_tooltip": "Allows managing discussions between the role and non player characters",
