--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -156,6 +156,7 @@
     "role_reward_type_discussion_placeholder": "Nom de la discussion",
     "role_reward_type_discussion": "Débloquer une discussion",
     "role_reward_type_discussion_tooltip": "Choisir le nom de la discussion",
+    "role_reward_type_randomObjects": "Objets aléatoire",
     "role_reward_delete": "cette Récompense",
     "role_personnalization_title": "Personnalisation",
     "role_personnalization_label": "Apparence, équipement",
@@ -417,10 +418,15 @@
     "rewards_type_object": "Objet",
     "rewards_type_character": "Contact du personnage",
     "rewards_type_skill": "Compétence",
+    "rewards_type_randomObjects": "Objets aléatoire",
     "rewards_name_label": "Nom",
     "rewards_object_placeholder": "Nom de l'objet",
     "rewards_character_placeholder": "Personnage",
     "rewards_skill_placeholder": "Compétence",
+    "rewards_randomObjects_repeat": "Nombre de tirages ",
+    "rewards_randomObjects_dropBetween_part1": "Récupérer entre",
+    "rewards_randomObjects_dropBetween_part2": "et",
+    "rewards_randomObjects_percentages_tootlip": "Pourcentage de chance de récupérer l'objet par tirage. Les pourcentages affectés à un objet sont considérés comme les chances de ne rien récupérer",
 
     "discussions_title": "Discussions",
     "discussions_tooltip": "Permet de gérer les discussions entre le rôle et les personnages non joueurs",
