--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -290,6 +290,10 @@
     "rules_ressource_tooltip": "Objets, ressources disponibles pour TOUS les rôles",
     "rules_clean": "Règles du jeu (cela inclut la suppression de toutes les ressources)",
     "rules_delete": "cette Ressource",
+    "ressource_rarity": "Rareté",
+    "ressource_rarity_legendary": "Légendaire",
+    "ressource_rarity_rare": "Rare",
+    "ressource_rarity_common": "Commun",
 
     "occurence_title": "Occurence du rôle",
     "occurence_tooltip": "Ceci permet de choisir combien de joueurs représenteront chaque rôle si le nombre de joueurs est amené à varier.",
@@ -470,4 +474,6 @@
     "discussion_reward_type_declarativeSentence_tootlip": "",
     "discussion_reward_type_interrogativeSentence_tooltip": "",
     "discussion_reward_type_response_tooltip": ""
+
+    
 }
