--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -290,6 +290,22 @@
     "rules_ressource_tooltip": "Objects and resources available for ALL roles",
     "rules_clean": "Game rules (This includes the deletion of all resources",
     "rules_delete": "this Resource",
+    "rules_gameMovements_title": "Movement in the game",
+    "rules_gameMovements_placeholder": "",
+    "rules_gameMechanics_title": "Game Mechanics",
+    "rules_gameMechanics_tutorial_label": "Game Tutorial",
+    "rules_gameMechanics_tutorial_placeholder": "Explain how the game works step by step",
+    "rules_gameMechanics_tutorial_tooltip": "What are the features of your game to explain? Imagine a simple situation where players could discover them before starting the game",
+    "rules_gameMechanics_easterEggs_label": "Easter Eggs",
+    "rules_gameMechanics_easterEggs_placeholder": "Where are they? How to obtain? What do they provide?",
+    "rules_gameMechanics_easterEggs_tooltip": "Easter Eggs are hidden surprises in the game, and they are optional. They give small bonuses to players, which can be an item, equipment, virtual currency, ...",
+    "rules_gameMechanics_ranking_label": "Ranking",
+    "rules_gameMechanics_ranking_placeholder": "Absolute or relative?",
+    "rules_gameMechanics_ranking_tooltip": "Do you want to display the ranking of a role or a team? Does the ranking show only the top X (absolute) or the ranking relative to others with a similar score (relative)? How will this score be displayed?",
+    "rules_gameMechanics_badges_label": "Badges",
+    "rules_gameMechanics_badges_placeholder": "Rewards unlocked under certain conditions",
+    "rules_gameMechanics_badges_tooltip": "What badges do you want to award them? Is it for accomplishing a particular task in the game? For reaching a certain skill level in the game? How will they be unlocked?",
+
     "ressource_rarity": "Rarity",
     "ressource_rarity_legendary": "Legendary",
     "ressource_rarity_rare": "Rare",
@@ -378,6 +394,8 @@
     "tutorial_optionnalPhase_occurence": "This allows you to define, when the number of players is greater than the number of roles, the distribution of players among the different roles. To define this, click on a Role tile.",
     "tutorial_optionnal_comments": "Comments",
     "tutorial_optionnalPhase_comments": "This allows you to add any information you deem important to specify on any tile. To add a comment, click on a tile, and the comments will be present in the sidebar.",
+    "tutorial_optionnal_gameMechanics": "Game Mechanics",
+    "tutorial_optionnalPhase_gameMechanics": "You can enrich your game with other mechanics such as a tutorial, easter eggs, a ranking, or badges. Tooltips will provide more details about these mechanics.",
 
     "verify_title": "Here are the feasibility verification details for your scenario:",
     "verify_error": "Warning, you have not entered the same time units for all tasks, so it is impossible to verify the scenario",
