--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -290,6 +290,22 @@
     "rules_ressource_tooltip": "Objets, ressources disponibles pour TOUS les rôles",
     "rules_clean": "Règles du jeu (cela inclut la suppression de toutes les ressources)",
     "rules_delete": "cette Ressource",
+    "rules_gameMovements_title": "Déplacements dans le jeu",
+    "rules_gameMovements_placeholder": "",
+    "rules_gameMechanics_title": "Mécaniques de jeu",
+    "rules_gameMechanics_tutorial_label": "Tutoriel du jeu",
+    "rules_gameMechanics_tutorial_placeholder": "Faites comprendre comment fonctionne le jeu pas à pas",
+    "rules_gameMechanics_tutorial_tooltip": "Quelles sont les fonctionnalités de votre jeu à faire comprendre ? Imaginez une situation simple où ils pourraient les découvrir avant de commencer le jeu",
+    "rules_gameMechanics_easterEggs_label": "Easter Eggs",
+    "rules_gameMechanics_easterEggs_placeholder": "Où sont-ils ? Comment obtenir ? Qu'apportent-ils ?",
+    "rules_gameMechanics_easterEggs_tooltip": "Oeufs de Pâques, ce sont des surprises cachées dans le jeu, elles sont facultatives. Elles donnent des petis bonus au joueurs, cela peut être un objet, un équipement, de la monnaie virtuelle, ...",
+    "rules_gameMechanics_ranking_label": "Classement",
+    "rules_gameMechanics_ranking_placeholder": "Absolu ou relatif ?",
+    "rules_gameMechanics_ranking_tooltip": "Souhaitez-vous montrer le classement d'un rôle ou d'une équipe ? Le classement montre-t-il uniquement les X meilleurs (absolu) ou le classement par rapport aux autres ayant un score équivalent (relatif) ? Comment sera affiché ce score ?",
+    "rules_gameMechanics_badges_label": "Badges",
+    "rules_gameMechanics_badges_placeholder": "Récompense débloquée sous certaines conditions",
+    "rules_gameMechanics_badges_tooltip": "Quels badges souhaitez-vous leur donner ? Est-ce pour avoir réaliser une chose particulière dans le jeu ? Pour avoir atteint un certain niveau de compétence dans le jeu ? Comment-vont-ils se débloquer ?",
+
     "ressource_rarity": "Rareté",
     "ressource_rarity_legendary": "Légendaire",
     "ressource_rarity_rare": "Rare",
@@ -378,6 +394,8 @@
     "tutorial_optionnalPhase_occurence": "Ceci permet de définir lorsque le nombre de joueur est supérieur au nombre de rôles, la répartition des joueurs au sein des différents rôles. Pour définir cela, cliquez sur une tuile Rôle.",
     "tutorial_optionnal_comments": "Commentaires",
     "tutorial_optionnalPhase_comments": "Ceci permet d'ajouter tout élément qui vous semble important de préciser sur n'importe quelle tuile. Pour ajouter un commentaire, cliquez sur une tuile et les commentaires seront présents dans la barre latérale.",
+    "tutorial_optionnal_gameMechanics": "Mécaniques du jeu",
+    "tutorial_optionnalPhase_gameMechanics": "Vous pouvez enrichir votre jeu avec d'autres mécaniques de jeu comme un tutoriel, des easter eggs, un classement ou des badges. Les infobulles pourront vous donner plus de détails sur ces mécaniques.",
 
     "verify_title": "Voici les informations de vérification de faisabilité de votre scénario :",
     "verify_error": "Attention, vous n'avez pas saisi les mêmes unités de temps sur toutes les tâches, il est donc impossible de vérifier le scénario",
